# Desksort

./: .gitignore  README.md
.claude/: launch.json
.github/workflows/: release.yml
homebrew-desksort/Casks/: desksort.rb
icons/: desksort.icns
src/: index.html  main.js  mock.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: history.rs  lib.rs  main.rs  organizer.rs  rules.rs
src/pages/: dashboard.js  history.js  rules.js  schedule.js  settings.js
